namespace GoldMetrics.GoldCheck.Platform.FleetOperations.Interfaces.Rest.Resources;

public record CompleteHaulingCycleResource(string DumpingPoint);
