namespace GoldMetrics.GoldCheck.Platform.FleetOperations.Interfaces.Rest.Resources;

public record CreateVehicleResource(string VehicleId, string OperatorId);
