namespace GoldMetrics.GoldCheck.Platform.FleetOperations.Interfaces.Rest.Resources;

public record LoadMaterialResource(decimal PayloadTons);
