namespace GoldMetrics.GoldCheck.Platform.FleetOperations.Interfaces.Rest.Resources;

public record StartHaulingCycleResource(string VehicleId, string LoadingPoint);
